// DO NOT EDIT: generated by Dremio openapi-generator.
syntax = "proto3";

package com.dremio.test.api;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option java_package = "com.dremio.test.api";
option java_outer_classname = "TestApiProto";

// Response content
message ResponseContent {
  optional string name = 1;
}

// Test oneof message with field expansion for references
message OneOf {
  oneof choice {
    // String choice
    // CONSTRAINT: Pattern(regexp = "[0-9]+")
    string string_value = 1;

    // Int choice
    int32 int_value = 2;

    // Int choice wrapper, won't exist as a message
    int32 another_int_value = 3;
  }
}

// Post response body.
message PostBody {
  // Float list.
  repeated float float_list = 1;
}

// String choice
message StringChoice {
  // CONSTRAINT: Pattern(regexp = "[0-9]+")
  optional string string_value = 1;
}

// Chunk of the post response.
message PostChunk {
  optional string text = 1;
}

message Error {
  string type = 1;

  // A human-readable explanation specific to this occurrence of the problem
  optional string detail = 2;

  // A JSON pointer to locate the problem within the request's content
  string pointer = 3;
}

// Int choice
message IntChoice {
  optional int32 int_value = 1;
}

// An RFC 9457 problem object
message Problem {
  // A URI reference that identifies the problem type
  optional string type = 1;

  // The HTTP status code generated by the origin server for this occurrence of the problem
  // CONSTRAINT: Min(value = 100)
  // CONSTRAINT: Max(value = 599)
  optional int64 status = 2;

  // A human-readable summary of the problem type
  optional string title = 3;

  // A human-readable explanation specific to this occurrence of the problem
  optional string detail = 4;
}

// Inline oneof.
message GetBodyInlineOneof {
  oneof choice {
    // String choice
    // CONSTRAINT: Pattern(regexp = "[0-9]+")
    string string_value = 1;

    // Int choice
    int32 int_value = 2;
  }
}

// GET response body.
message GetBody {
  optional Enum enum_value = 1;

  // Int value.
  // CONSTRAINT: Min(value = 10)
  // CONSTRAINT: Max(value = 20)
  optional int32 int_value1 = 2;

  // Long value.
  optional int64 long_value = 3;

  // String value.
  optional string string_value1 = 4;

  // Email value.
  // CONSTRAINT: Email()
  optional string email = 5;

  // Float value.
  optional float float_value = 6;

  // Double value.
  optional double double_value = 7;

  // Timestamp value.
  optional google.protobuf.Timestamp timestamp_value = 8;

  // Duration value.
  optional google.protobuf.Duration duration_value = 9;

  // String list.
  repeated string string_list = 10;

  // Inline oneof.
  optional GetBodyInlineOneof inline_oneof = 11;

  // Oneof of consts works as a enum.
  optional GetBodyEnumOneof enum_oneof = 12;
}

// Multi-line enum description to test
// comments for enums.
enum Enum {
  ENUM_UNSPECIFIED = 0;

  // First enum value.
  ABC = 1;

  // Second enum value
  CDE = 2;
}

// Enum can be defined with const fields io oneOf.
enum EnumOneOf {
  ENUM_ONE_OF_UNSPECIFIED = 0;

  // ABC1 description
  ABC1 = 1;

  // DEF1 description
  DEF1 = 2;
}

// Oneof of consts works as a enum.
enum GetBodyEnumOneof {
  GET_BODY_ENUM_ONEOF_UNSPECIFIED = 0;

  // Value1 description.
  VALUE1 = 1;

  // Value2 description.
  VALUE2 = 2;
}

message RuntimeProblem {
  // A URI reference that identifies the problem type
  optional string type = 1;

  // The HTTP status code generated by the origin server for this occurrence of the problem
  // CONSTRAINT: Min(value = 100)
  // CONSTRAINT: Max(value = 599)
  optional int64 status = 2;

  // A human-readable summary of the problem type
  optional string title = 3;

  // A human-readable explanation specific to this occurrence of the problem
  optional string detail = 4;

  // Runtime problem cause
  string cause = 5;
}

message ValidationProblem {
  // A URI reference that identifies the problem type
  optional string type = 1;

  // The HTTP status code generated by the origin server for this occurrence of the problem
  // CONSTRAINT: Min(value = 100)
  // CONSTRAINT: Max(value = 599)
  optional int64 status = 2;

  // A human-readable summary of the problem type
  optional string title = 3;

  // A human-readable explanation specific to this occurrence of the problem
  optional string detail = 4;

  // An extension containing multiple validation or request errors
  repeated Error errors = 5;
}
